--- a/NLP_padding.ipynb
+++ b/NLP_padding.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "name": "NLP_padding.ipynb",
-      "private_outputs": true,
       "provenance": [],
       "authorship_tag": "ABX9TyNpVGIN5d4SQH+zqXvnvglF",
       "include_colab_link": true
@@ -30,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "p5kJtHxkXle_"
       },
@@ -54,10 +53,22 @@
         "print(sentences)"
       ],
       "metadata": {
-        "id": "xUpuzPWBYLgF"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xUpuzPWBYLgF",
+        "outputId": "14145dc4-5590-436b-ea0e-5d6cd9efa3ec"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['My favorite food is ice cream', 'do you like ice cream too?', 'My dog likes ice cream!', 'your favorite flavor of icecream is chocolate', \"chocolate isn't good for dogs\", 'your dog, your cat, and your parrot prefer broccoli']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -67,7 +78,7 @@
       "metadata": {
         "id": "Qxcbk9N-X-iy"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -78,10 +89,22 @@
         "print(word_index)"
       ],
       "metadata": {
-        "id": "1IDG6_3VYP55"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1IDG6_3VYP55",
+        "outputId": "79b57fbf-9017-4099-bbbd-24571164a6a6"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'<OOV>': 1, 'your': 2, 'ice': 3, 'cream': 4, 'my': 5, 'favorite': 6, 'is': 7, 'dog': 8, 'chocolate': 9, 'food': 10, 'do': 11, 'you': 12, 'like': 13, 'too': 14, 'likes': 15, 'flavor': 16, 'of': 17, 'icecream': 18, \"isn't\": 19, 'good': 20, 'for': 21, 'dogs': 22, 'cat': 23, 'and': 24, 'parrot': 25, 'prefer': 26, 'broccoli': 27}\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -90,10 +113,22 @@
         "print (sequences)"
       ],
       "metadata": {
-        "id": "X8XkxZPlYSZl"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "X8XkxZPlYSZl",
+        "outputId": "2497a5a2-8844-477b-ac61-4472607c4959"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[5, 6, 10, 7, 3, 4], [11, 12, 13, 3, 4, 14], [5, 8, 15, 3, 4], [2, 6, 16, 17, 18, 7, 9], [9, 19, 20, 21, 22], [2, 8, 2, 23, 24, 2, 25, 26, 27]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -103,7 +138,7 @@
       "metadata": {
         "id": "AWnecqAoYVEl"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -114,10 +149,22 @@
         "print(word_index)"
       ],
       "metadata": {
-        "id": "WfoJv5NZY2z9"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WfoJv5NZY2z9",
+        "outputId": "7c2135e6-7d14-4c1b-9842-b78099a79328"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'<OOV>': 1, 'your': 2, 'ice': 3, 'cream': 4, 'my': 5, 'favorite': 6, 'is': 7, 'dog': 8, 'chocolate': 9, 'food': 10, 'do': 11, 'you': 12, 'like': 13, 'too': 14, 'likes': 15, 'flavor': 16, 'of': 17, 'icecream': 18, \"isn't\": 19, 'good': 20, 'for': 21, 'dogs': 22, 'cat': 23, 'and': 24, 'parrot': 25, 'prefer': 26, 'broccoli': 27}\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -126,10 +173,22 @@
         "print (sequences)"
       ],
       "metadata": {
-        "id": "Kmje6GlvY4jY"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Kmje6GlvY4jY",
+        "outputId": "e8a5d35e-02d9-405d-90b6-074e7f6f3e6b"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[5, 6, 10, 7, 3, 4], [11, 12, 13, 3, 4, 14], [5, 8, 15, 3, 4], [2, 6, 16, 17, 18, 7, 9], [9, 19, 20, 21, 22], [2, 8, 2, 23, 24, 2, 25, 26, 27]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -138,10 +197,27 @@
         "print(padded)"
       ],
       "metadata": {
-        "id": "-MJnoaF_Y6mt"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-MJnoaF_Y6mt",
+        "outputId": "d2c585a2-d965-41d1-890f-10e0bf2a4cb4"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 0  0  0  5  6 10  7  3  4]\n",
+            " [ 0  0  0 11 12 13  3  4 14]\n",
+            " [ 0  0  0  0  5  8 15  3  4]\n",
+            " [ 0  0  2  6 16 17 18  7  9]\n",
+            " [ 0  0  0  0  9 19 20 21 22]\n",
+            " [ 2  8  2 23 24  2 25 26 27]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -152,10 +228,33 @@
         "print(padded)"
       ],
       "metadata": {
-        "id": "ybGgXQ-ccOWg"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ybGgXQ-ccOWg",
+        "outputId": "7b667f6e-b0c0-4685-b1f9-7b01de86bea8"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            " Word Index =  {'<OOV>': 1, 'your': 2, 'ice': 3, 'cream': 4, 'my': 5, 'favorite': 6, 'is': 7, 'dog': 8, 'chocolate': 9, 'food': 10, 'do': 11, 'you': 12, 'like': 13, 'too': 14, 'likes': 15, 'flavor': 16, 'of': 17, 'icecream': 18, \"isn't\": 19, 'good': 20, 'for': 21, 'dogs': 22, 'cat': 23, 'and': 24, 'parrot': 25, 'prefer': 26, 'broccoli': 27}\n",
+            "\n",
+            " Sequences =  [[5, 6, 10, 7, 3, 4], [11, 12, 13, 3, 4, 14], [5, 8, 15, 3, 4], [2, 6, 16, 17, 18, 7, 9], [9, 19, 20, 21, 22], [2, 8, 2, 23, 24, 2, 25, 26, 27]]\n",
+            "\n",
+            " Padded Sequences :\n",
+            "[[ 0  0  0  5  6 10  7  3  4]\n",
+            " [ 0  0  0 11 12 13  3  4 14]\n",
+            " [ 0  0  0  0  5  8 15  3  4]\n",
+            " [ 0  0  2  6 16 17 18  7  9]\n",
+            " [ 0  0  0  0  9 19 20 21 22]\n",
+            " [ 2  8  2 23 24  2 25 26 27]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -164,10 +263,27 @@
         "print(padded)"
       ],
       "metadata": {
-        "id": "unBYhB86cj4s"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "unBYhB86cj4s",
+        "outputId": "328ba8df-7b29-4901-d47b-a9a14a49f2b9"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 5  6 10  7  3  4  0  0  0  0  0  0  0  0  0]\n",
+            " [11 12 13  3  4 14  0  0  0  0  0  0  0  0  0]\n",
+            " [ 5  8 15  3  4  0  0  0  0  0  0  0  0  0  0]\n",
+            " [ 2  6 16 17 18  7  9  0  0  0  0  0  0  0  0]\n",
+            " [ 9 19 20 21 22  0  0  0  0  0  0  0  0  0  0]\n",
+            " [ 2  8  2 23 24  2 25 26 27  0  0  0  0  0  0]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -176,10 +292,27 @@
         "print(padded)"
       ],
       "metadata": {
-        "id": "5w554emGc2Qe"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5w554emGc2Qe",
+        "outputId": "1ca900cf-4d50-4dcf-805c-d1db449b1fb1"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 7  3  4]\n",
+            " [ 3  4 14]\n",
+            " [15  3  4]\n",
+            " [18  7  9]\n",
+            " [20 21 22]\n",
+            " [25 26 27]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -191,10 +324,22 @@
         "print (test_data)\n"
       ],
       "metadata": {
-        "id": "1nXTswyedLEy"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1nXTswyedLEy",
+        "outputId": "f9f69a94-cf84-428b-d515-ec32c246e484"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[\"my best friend's favorite ice cream flavor is strawberry\", \"my dog's best friend is a manatee\"]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -205,10 +350,22 @@
         "print(\"<OOV> has the number\", word_index['<OOV>'], \"in the word index.\")\n"
       ],
       "metadata": {
-        "id": "JrO6EULsddfx"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JrO6EULsddfx",
+        "outputId": "fa190afc-7e7f-4ddc-dc9a-25a983db71a2"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<OOV> has the number 1 in the word index.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -218,10 +375,23 @@
         "print(\"\\nTest Sequence = \", test_seq)\n"
       ],
       "metadata": {
-        "id": "VexWaZNadgWB"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VexWaZNadgWB",
+        "outputId": "57d79e68-b0fb-49ff-b6fb-0247cbee08c1"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Test Sequence =  [[5, 1, 1, 6, 3, 4, 16, 7, 1], [5, 1, 1, 1, 7, 1, 1]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -236,10 +406,25 @@
         "print(padded)"
       ],
       "metadata": {
-        "id": "nEWQmRZQdj12"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nEWQmRZQdj12",
+        "outputId": "4a969d11-be04-4e48-dd4e-0b07be536d1a"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Padded Test Sequence: \n",
+            "[[ 0  5  1  1  6  3  4 16  7  1]\n",
+            " [ 0  0  0  5  1  1  1  7  1  1]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
